# SanskritTransliteration

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
SanskritTransliteration/: __init__.py  transliteration.py  transliteration_table.csv
tests/: test_transliteration.py
