[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SanskritTransliteration"
version = "0.1.0"
description = "A module for Sanskrit transliteration using a custom mapping table"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yuzuki Tsukagoshi" }]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Yuzki/SanskritTransliteration"

[tool.setuptools]
packages = ["SanskritTransliteration"]
include-package-data = true

[tool.setuptools.package-data]
SanskritTransliteration = ["transliteration_table.csv"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
